@@ -2,10 +2,10 @@
     background-color: #fafafa;
 }
 .color-red {
-    background-color: #ff4757;
+    background-color: #ff3030;
 }
 .color-orange {
-    background-color: #ff6348;
+    background-color: #ff7308;
 }
 .color-yellow {
     background-color: #ffcc33;
