@@ -2,13 +2,13 @@
     background-color: #fafafa;
 }
 .color-red {
-    background-color: #eb2f06;
+    background-color: #ff5656;
 }
 .color-orange {
     background-color: #fa983a;
 }
 .color-yellow {
-    background-color: #f6b93b;
+    background-color: #f6d95b;
 }
 .color-green {
     background-color: #78e08f;
